@@ -14,7 +14,7 @@ var showClock = 0;   // 0 = no, 1 = yes
 var SwitchGuide = 0; // 0 = no, 1 = yes
 var TimeShift = 0;   // 0 = no, 1 = yes timeshift
 var ShowSubs = 1;    // 0 = no, 1 = yes (default)
-var KillStream = 1;  //Close stream on Standby
+var KillStream = 1;  // 1 = Close stream on Standby
 
 months = new Array('January', 'February', 'March', 'April', 'May', 'June', 'Jully', 'August', 'September', 'October', 'November', 'December');
 days = new Array('Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday');
@@ -35,9 +35,10 @@ var ChanGroup = 0; // default TV group
 var minChan = new Array(); var maxChan = new Array(); var defChan = new Array(); var baseChn = new Array(); var protChn = new Array(); var ServerAdres = new Array(); // Define settings for Channels.
 
 // Server for Recordings
-var recServ = "http://192.168.3.15:8000";
-var RestFulAPI = "http://192.168.3.15:8002";
-var MPDAddress = "http://192.168.3.15:8888";
+var server_ip = "http://192.168.3.15";
+var recServ = server_ip + ":8000";
+var RestFulAPI = server_ip + ":8002";
+var MPDAddress = server_ip + ":8888";
 
 // Radio channels.js Settings
 minChan[9] = 9001;
@@ -45,7 +46,7 @@ maxChan[9] = 9099; // set not too far from max rd channel to speed up zapping
 defChan[9] = 9051;
 baseChn[9] = 9000;
 protChn[9] = 0;
-ServerAdres[9] = "http://192.168.3.15:3000/";
+ServerAdres[9] = server_ip + ":3000/";
 
 // Protected channels.js Settings
 minChan[6] = 6001;
@@ -53,7 +54,7 @@ maxChan[6] = 6040; // set not too far from max prt channel to speed up zapping
 defChan[6] = 6001;
 baseChn[6] = 6000;
 protChn[6] = 1;
-ServerAdres[6] = "http://192.168.3.15:3000/";
+ServerAdres[6] = server_ip + ":3000/";
 
 // TV channels.js Settings
 minChan[0] = 1;
@@ -61,7 +62,7 @@ maxChan[0] = 999; // set not too far from max TV channel to speed up zapping
 defChan[0] = currChan;
 baseChn[0] = 0;
 protChn[0] = 0;
-ServerAdres[0] = "http://192.168.3.15:3000/";
+ServerAdres[0] = server_ip + ":3000/";
 
 //HD list
 minChan[1] = 1001;
@@ -69,7 +70,7 @@ maxChan[1] = 1999; // set not too far from max HD channel to speed up zapping
 defChan[1] = 1001;
 baseChn[1] = 1000;
 protChn[1] = 0;
-ServerAdres[1] = "http://192.168.3.15:3000/";
+ServerAdres[1] = server_ip + ":3000/";
 
 // MultiCast
 minChan[5] = 5001;
